fix(css): text overflow for uploader modal header

--- a/static/style.css
+++ b/static/style.css
@@ -1319,6 +1319,7 @@ p .award + .award {
   text-align: center;
   text-overflow: ellipsis;
   white-space: nowrap;
+  overflow: hidden;
 }
 
 #uploader .image-pica {
